--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <title>Python Flask Bucket List App</title>
  
  
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
- 
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+        <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link href="../static/jumbotron-narrow.css" rel="stylesheet">
  
  
 </head>
